# physical-ai-humanoid-textbook

./: .gitignore  README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  test-locales.sh  tsconfig.json
.claude/: settings.local.json
.claude/agents/: speckit-architect.md
.specify/memory/: constitution.md
backend/: .env.example  INGESTION.md  README.md  pyproject.toml  render.yaml  requirements.txt  verify_config.py
backend/app/: main.py
backend/app/api/: chat.py  health.py  language.py  voice.py
backend/app/core/: config.py  deps.py  i18n.py  logging.py
backend/app/db/: session.py
backend/app/models/: db.py  schemas.py
backend/app/scripts/: __init__.py  ingest_docs.py
backend/app/services/: chat_storage.py  chunker.py  document_reader.py  embeddings.py  qdrant.py  rag.py  rag_multilingual.py  voice.py
backend/scripts/: index_docs.py  recreate_collection.py
backend/tests/: test_language_detection.py  test_rag_multilingual.py
docs/: intro.md
docs/module-1-ros2/: chapter-1-basics.mdx  overview.mdx
docs/module-2-digital-twin-gazebo-unity/: chapter-1-simulation-basics.mdx  chapter-2-advanced-physics.mdx  overview.mdx
docs/module-3-nvidia-isaac/: chapter-1-getting-started.mdx  chapter-2-isaac-gym.mdx  overview.mdx
docs/module-4-vision-language-action/: chapter-1-vla-intro.mdx  overview.mdx
i18n/ja/: code.json
i18n/ur/: code.json
scripts/: translate-ui-strings.py
specs/001-docusaurus-frontend/: plan.md  spec.md  tasks.md
specs/001-multilingual-support/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-rag-backend-study-assistant/: plan.md  spec.md  tasks.md
specs/003-chat-page-light-mode-ui/: plan.md
specs/003-chat-ui-redesign/: PHASE-0-COMPLETE.md  PHASE-1-COMPLETE.md  clarify.md  plan.md  spec.md  tasks.md
src/css/: custom.css
src/pages/: chat.module.css  (+5 more)
(+96 files in other folders)
